--- a/demo.html
+++ b/demo.html
@@ -3,5 +3,17 @@
 <body>
 <h1> My First Heading</h1>
 <p> My first paragraph.</p>
+<a href="https://www.google.com"> This is a link</a>
+<button>Click me</button>
+<ul>
+	<li>Coffee</li>
+	<li>Tea</li>
+	<li>Milk</li>
+</ul>
+<ol>
+	<li>Coffee</li>
+	<li>Tea</li>
+	<li>Milk</li>
+</ol>
 </body>
 </html>
